<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#181f2f"
    android:orientation="vertical"
    tools:context=".APmode">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="320dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:background="#89F7E5"
        android:scaleType="centerInside"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/apmode" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:text="@string/AP_setting_1"
        android:textColor="#FFFFFF" />

    <Spinner
        android:id="@+id/APHUBSSID"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:background="@drawable/underline"
        android:ems="10"
        android:textSize="17dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/APHUBSSIDPWD"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:paddingLeft="7dp"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:text="@string/AP_setting_2"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/AP_mode_200or300linkAP"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:text="@string/AP_setting_3"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:text="@string/AP_setting_4"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:text="@string/AP_setting_5"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/AP_mode_input200or300IP"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:text="@string/AP_setting_6"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/AP300IP"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:digits="0123456789."
        android:paddingLeft="7dp"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:text="@string/AP_setting_7"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/APDIBIP"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="text"
        android:digits="0123456789."
        android:paddingLeft="7dp"
        android:textSize="17dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearLayoutEdit"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/APsave"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="bottom"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/primary_button"
            android:text="@string/Save"
            android:textColor="@color/colorWhite"
            android:textSize="12dp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_gravity="bottom"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/primary_button"
            android:text="@string/Cancel"
            android:textColor="@color/colorWhite"
            android:textSize="12dp" />
    </LinearLayout>

</LinearLayout>