<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#181f2f"
    tools:context=".Option">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/addpatient"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_margin="12dp"
            android:background="@drawable/option_button"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/addpatient" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/Add_client"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="25dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/addexamination"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_margin="12dp"
            android:background="@drawable/option_button"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/addexamination" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/Add_exam"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="25dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/BtnWaitVimg"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_margin="12dp"
            android:background="@drawable/option_button"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/waitread" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/wait_view"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="25dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/BtnWaitPrinter"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_margin="12dp"
            android:background="@drawable/option_button"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/waitprinter" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/wait_print"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="25dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/patientpdflist"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_margin="12dp"
            android:background="@drawable/option_button"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/patientlist" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/Review_title"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="25dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/setting"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_margin="12dp"
            android:background="@drawable/option_button"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:srcCompat="@drawable/setting" />

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/Setting"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="25dp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>