<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#181f2f">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_marginStart="0dp"
            android:paddingTop="50dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/Name"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/etFirstName"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:backgroundTint="#adadad"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="#adadad"
                    android:imeOptions="actionDone"
                    android:inputType="text"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="ID"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/etLastName"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:backgroundTint="#adadad"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="#adadad"
                    android:imeOptions="actionDone"
                    android:inputType="textVisiblePassword"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/textView35"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/Phone"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/etFavFood"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:backgroundTint="#adadad"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="#adadad"
                    android:imeOptions="actionDone"
                    android:inputType="number"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:paddingTop="8dp">

                <TextView
                    android:id="@+id/textView33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:text="@string/Birthady"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/dateBirthday"
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/underlineactivity"
                    android:gravity="bottom"
                    android:textAlignment="gravity"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dp"
                    android:text="@string/Gender"
                    android:textColor="@color/colorWhite"
                    android:textSize="20dp" />

                <RadioGroup
                    android:id="@+id/radioGroupId"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioMan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginRight="10pt"
                        android:checked="true"
                        android:text="男"
                        android:textColor="#adadad" />

                    <RadioButton
                        android:id="@+id/radioWomen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10pt"
                        android:text="女"
                        android:textColor="#adadad" />
                </RadioGroup>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="bottom"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/primary_button"
                android:text="@string/Add"
                android:textColor="@color/colorWhite"
                android:textSize="12dp" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="bottom"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/primary_button"
                android:text="@string/Cancel"
                android:textColor="@color/colorWhite"
                android:textSize="12dp" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
